# countdown-overlay

./: .gitignore  README.md  README.zh-CN.md  design-qa.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
public/smoke/: README.md
qa/: cdp-qa.mjs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  scheduler.rs  session_mac.rs  session_win.rs  timebj.rs
src/overlay/: backgrounds.ts  countdown.ts  engine.ts  fluid.ts  main.ts  particles.ts  performance.ts  smoke.ts  sound.ts  style.css  themes.ts  video-smoke.ts
src/settings/: main.ts  style.css
src/shared/: storage.ts  themes-meta.ts  time.ts  types.ts
