[package]
name = "bang"
version = "0.1.0"
description = "Bang — cross-platform desktop countdown overlay"
authors = ["zhaodesen"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name from colliding with the bin name on Windows.
name = "bang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `macos-private-api` is required for transparent windows on macOS.
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
