[package]
name = "bang"
version = "0.1.0"
description = "Bang — cross-platform desktop countdown overlay"
authors = ["zhaodesen"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name from colliding with the bin name on Windows.
name = "bang_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `macos-private-api` is required for transparent windows on macOS.
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "sync", "time"] }
chrono = "0.4"

[target.'cfg(windows)'.dependencies]
# Session lock/unlock notifications (WTSRegisterSessionNotification).
windows-sys = { version = "0.60", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_System_RemoteDesktop",
  "Win32_System_LibraryLoader",
] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
